syntax = "proto3";

package card;

option go_package = "./cardholder";
//goctl rpc protoc proto/card.proto --go_out=./pb --go-grpc_out=./pb --zrpc_out=./card --style=goZero


service CardHolderService {
  rpc CreateAccount(CreateAccountReq) returns (CreateAccountResp);
}


message CreateAccountReq {
}

message CreateAccountResp {
}